Changes to settings page to prevent jump.

--- a/settings/css/settings.less
+++ b/settings/css/settings.less
@@ -175,12 +175,23 @@
 	}
 }
 
+#siteorigin-settings-submit {
+	display: block;
+	float: left;
+
+	&:active, &:focus {
+		outline: none;
+	}
+}
+
 #siteorigin-theme-support {
 	font-size: 0.9em;
-	display: inline-block;
+	display: block;
 	color: #666666;
 	margin-left: 1em;
 	text-decoration: none;
+	float: left;
+	margin-top: 0.45em;
 }
 
 #siteorigin-theme-support:hover {
